// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`paginateBlogPosts generates a single page 1`] = `
[
  {
    "items": [
      "post1",
      "post2",
      "post3",
      "post4",
      "post5",
    ],
    "metadata": {
      "blogDescription": "Blog Description",
      "blogTitle": "Blog Title",
      "nextPage": undefined,
      "page": 1,
      "permalink": "/",
      "postsPerPage": 10,
      "previousPage": undefined,
      "totalCount": 5,
      "totalPages": 1,
    },
  },
]
`;

exports[`paginateBlogPosts generates pages - 0 blog post 1`] = `
[
  {
    "items": [],
    "metadata": {
      "blogDescription": "Blog Description",
      "blogTitle": "Blog Title",
      "nextPage": undefined,
      "page": 1,
      "permalink": "/blog",
      "postsPerPage": 2,
      "previousPage": undefined,
      "totalCount": 0,
      "totalPages": 1,
    },
  },
]
`;

exports[`paginateBlogPosts generates pages 1`] = `
[
  {
    "items": [
      "post1",
      "post2",
    ],
    "metadata": {
      "blogDescription": "Blog Description",
      "blogTitle": "Blog Title",
      "nextPage": "/blog/page/2",
      "page": 1,
      "permalink": "/blog",
      "postsPerPage": 2,
      "previousPage": undefined,
      "totalCount": 5,
      "totalPages": 3,
    },
  },
  {
    "items": [
      "post3",
      "post4",
    ],
    "metadata": {
      "blogDescription": "Blog Description",
      "blogTitle": "Blog Title",
      "nextPage": "/blog/page/3",
      "page": 2,
      "permalink": "/blog/page/2",
      "postsPerPage": 2,
      "previousPage": "/blog",
      "totalCount": 5,
      "totalPages": 3,
    },
  },
  {
    "items": [
      "post5",
    ],
    "metadata": {
      "blogDescription": "Blog Description",
      "blogTitle": "Blog Title",
      "nextPage": undefined,
      "page": 3,
      "permalink": "/blog/page/3",
      "postsPerPage": 2,
      "previousPage": "/blog/page/2",
      "totalCount": 5,
      "totalPages": 3,
    },
  },
]
`;

exports[`paginateBlogPosts generates pages at blog root 1`] = `
[
  {
    "items": [
      "post1",
      "post2",
    ],
    "metadata": {
      "blogDescription": "Blog Description",
      "blogTitle": "Blog Title",
      "nextPage": "/page/2",
      "page": 1,
      "permalink": "/",
      "postsPerPage": 2,
      "previousPage": undefined,
      "totalCount": 5,
      "totalPages": 3,
    },
  },
  {
    "items": [
      "post3",
      "post4",
    ],
    "metadata": {
      "blogDescription": "Blog Description",
      "blogTitle": "Blog Title",
      "nextPage": "/page/3",
      "page": 2,
      "permalink": "/page/2",
      "postsPerPage": 2,
      "previousPage": "/",
      "totalCount": 5,
      "totalPages": 3,
    },
  },
  {
    "items": [
      "post5",
    ],
    "metadata": {
      "blogDescription": "Blog Description",
      "blogTitle": "Blog Title",
      "nextPage": undefined,
      "page": 3,
      "permalink": "/page/3",
      "postsPerPage": 2,
      "previousPage": "/page/2",
      "totalCount": 5,
      "totalPages": 3,
    },
  },
]
`;

exports[`paginateBlogPosts generates pages with custom pageBasePath 1`] = `
[
  {
    "items": [
      "post1",
      "post2",
    ],
    "metadata": {
      "blogDescription": "Blog Description",
      "blogTitle": "Blog Title",
      "nextPage": "/blog/customPageBasePath/2",
      "page": 1,
      "permalink": "/blog",
      "postsPerPage": 2,
      "previousPage": undefined,
      "totalCount": 5,
      "totalPages": 3,
    },
  },
  {
    "items": [
      "post3",
      "post4",
    ],
    "metadata": {
      "blogDescription": "Blog Description",
      "blogTitle": "Blog Title",
      "nextPage": "/blog/customPageBasePath/3",
      "page": 2,
      "permalink": "/blog/customPageBasePath/2",
      "postsPerPage": 2,
      "previousPage": "/blog",
      "totalCount": 5,
      "totalPages": 3,
    },
  },
  {
    "items": [
      "post5",
    ],
    "metadata": {
      "blogDescription": "Blog Description",
      "blogTitle": "Blog Title",
      "nextPage": undefined,
      "page": 3,
      "permalink": "/blog/customPageBasePath/3",
      "postsPerPage": 2,
      "previousPage": "/blog/customPageBasePath/2",
      "totalCount": 5,
      "totalPages": 3,
    },
  },
]
`;
